--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,17 @@
 name = "lru-st"
 version = "0.1.0"
 edition = "2021"
+description = "A package providing a Vec base doubly linked list implementation and LRU data structures"
+license-file = "LICENSE"
+repository = "https://github.com/qjerome/lru-st"
+readme = "README.md"
+keywords = ["data-structure", "lru"]
 
 [features]
-async = []
-
+# feature providing thread safety
+sync = []
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+thiserror = "1.0.58"
